# orbitalMechanics

./: .pyproject.toml.un~  README.md  setup.cfg  setup.py  tox.ini
orbmec/: __init__.py
orbmec/maneuver/: __init__.py  hohmann.py  phasing.py  twoImpulseR.py
orbmec/utils/: __init__.py  clohessyWiltshireMatrix.py  geo_equatorial_frame.py  gibbs.py  helper.py  rkf45.py  transformMatrix.py
tests/: test_maneuver.py  test_utils.py
