[metadata]
name = orbital-mechanics-package-maxmekiska
version = 0.0.1
author = Max Mekiska
author_email = maxmekiska@gmail.com
description = Package that implements orbital mechanics concepts.
long_description = file: README.md
long_description_content_type = text/markdown
url = none
project_urls =
    Bug Tracker = https://github.com/maxmekiska/orbitalMechanics/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = orbmec
packages = find:
python_requires = >=3.6

[options.packages.find]
where = orbmec
